2013-01-10  Dan Beam  <dbeam@chromium.org>

        Implement AutocompleteErrorEvent#reason
        https://bugs.webkit.org/show_bug.cgi?id=105568

        Reviewed by Adam Barth.

        * public/WebFormElement.h: Added matching enum values for public chromium WebKit API.
        * src/AssertMatchingEnums.cpp: Updated compile assert that WebKit and WebCore enums match.

2013-01-10  Adam Barth  <abarth@webkit.org>

        Add an ENABLE macro and a WebCore::Setting for the threaded parser
        https://bugs.webkit.org/show_bug.cgi?id=106595

        Reviewed by Benjamin Poulain.

        Explicitly disable THREADED_HTML_PARSER for Chromium so that we can
        more easily enable it locally.

        * features.gypi:

2013-01-10  John Mellor  <johnme@chromium.org>

        Fix scale of screen.width, window.outerWidth and @media device-width when page scale not applied in compositor.
        https://bugs.webkit.org/show_bug.cgi?id=106460

        Reviewed by Kenneth Rohde Christiansen.

        1. Exposes the existing applyDeviceScaleFactorInCompositor from
        WebSettings on Settings (and stores the value there instead), so it can
        be accessed from WebCore.

        2. Changes ChromeClientImpl::windowRect to return values in density
        independent (UI) pixels pixels instead of physical screen pixels (see
        explanation in Source/WebCore/ChangeLog).

        * src/ChromeClientImpl.cpp:
        (WebKit::ChromeClientImpl::windowRect):
            Normalizes window rect scale.
        * src/WebSettingsImpl.cpp:
        (WebKit::WebSettingsImpl::WebSettingsImpl):
        (WebKit::WebSettingsImpl::setApplyDeviceScaleFactorInCompositor):
        (WebKit::WebSettingsImpl::applyDeviceScaleFactorInCompositor):
        (WebKit):
        * src/WebSettingsImpl.h:
        (WebSettingsImpl):

2013-01-10  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed.  Rolled DEPS.

        * DEPS:

2013-01-10  Dimitri Glazkov  <dglazkov@chromium.org>
