@@ -62,7 +62,11 @@ static PassRefPtr<SharedBuffer> readFile(const char* fileName)
     return SharedBuffer::adoptVector(buffer);
 }
 
+#if OS(LINUX)
 TEST(WebImageTest, PNGImage)
+#else
+TEST(WebImageTest, DISABLED_PNGImage)
+#endif
 {
     RefPtr<SharedBuffer> data = readFile("white-1x1.png");
     ASSERT_TRUE(data.get());
@@ -73,7 +77,11 @@ TEST(WebImageTest, PNGImage)
     EXPECT_EQ(SkColorSetARGB(255, 255, 255, 255), image.getSkBitmap().getColor(0, 0));
 }
 
+#if OS(LINUX)
 TEST(WebImageTest, ICOImage)
+#else
+TEST(WebImageTest, DISABLED_ICOImage)
+#endif
 {
     RefPtr<SharedBuffer> data = readFile("black-and-white.ico");
     ASSERT_TRUE(data.get());
